Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-918

Fix memtuple forming bug when null-saved size is larger than 32763 bytes

    XMLWordPrintableJSON

Details

    Description

      When run a sql, an error happens in QE:
      psql:run.sql:24: ERROR: Query Executor Error in seg2 localhost:40000 pid=55810: server closed the connection unexpectedly
      DETAIL:
      This probably means the server terminated abnormally
      before or while processing the request.

      2016-07-13 00:21:53.951987 CST,,,p34013,th0,,,2016-07-13 00:21:29 CST,0,con33,cmd33,seg1,slice2,,,,"PANIC","XX000","Unexpected internal error: Segment process received signal SIGSEGV",,,,,,,0,,,,"1 0x8b764e postgres <symbol not found> + 0x8b764e
      2 0x3b66e0f710 libpthread.so.0 <symbol not found> + 0x66e0f710
      3 0x3b6668995b libc.so.6 memcpy + 0x2eb
      4 0x8940d8 postgres textout + 0x58
      5 0x8c32d7 postgres DirectFunctionCall1 + 0x47
      6 0x88a126 postgres text_timestamp + 0xc6
      7 0x669b47 postgres <symbol not found> + 0x669b47
      8 0x669fe9 postgres <symbol not found> + 0x669fe9
      9 0x66f54e postgres ExecProject + 0x23e
      10 0x680695 postgres ExecAgg + 0x525
      11 0x6643b1 postgres ExecProcNode + 0x221
      12 0x689da8 postgres ExecLimit + 0x218
      13 0x664521 postgres ExecProcNode + 0x391
      14 0x68d549 postgres ExecMotion + 0x39
      15 0x6643c1 postgres ExecProcNode + 0x231
      16 0x660752 postgres <symbol not found> + 0x660752
      17 0x6610ea postgres ExecutorRun + 0x4ca
      18 0x7e4c3a postgres PortalRun + 0x58a
      19 0x7dab64 postgres <symbol not found> + 0x7dab64
      20 0x7dfaf5 postgres PostgresMain + 0x2b65
      21 0x790e7f postgres <symbol not found> + 0x790e7f
      22 0x793b39 postgres PostmasterMain + 0x759
      23 0x4a19cf postgres main + 0x50f
      24 0x3b6661ed5d libc.so.6 __libc_start_main + 0xfd
      25 0x4a1a4d postgres <symbol not found> + 0x4a1a4d

      Attachments

        1. run.sql
          243 kB
          Wen Lin

        Issue Links

          Activity

            People

              wlin Wen Lin
              wlin Wen Lin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: