HAWQ-918. Fix memtuple forming bug when null-saved size is larger than 32763 bytes